# indextree

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  index.html  search-index.js
.circleci/: config.yml
.github/: dependabot.yml  grcov.yml
.github/workflows/: test.yml
doc/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/convert/: trait.Into.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/error/: trait.Error.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/hash/: trait.Hash.js
doc/indextree/: all.html  enum.NodeEdge.html  enum.NodeError.html  index.html  sidebar-items.js  struct.Ancestors.html  struct.Arena.html  struct.Children.html  struct.DebugPrettyPrint.html  struct.Descendants.html  struct.FollowingSiblings.html  struct.Node.html  struct.NodeId.html  struct.PrecedingSiblings.html  struct.Predecessors.html  struct.ReverseChildren.html  struct.ReverseTraverse.html  struct.Traverse.html
doc/indextree/arena/: struct.Arena.html
doc/indextree/debug_pretty_print/: struct.DebugPrettyPrint.html
doc/indextree/error/: enum.NodeError.html
doc/indextree/id/: struct.NodeId.html
doc/indextree/node/: struct.Node.html
doc/indextree/traverse/: enum.NodeEdge.html  struct.Ancestors.html  struct.Children.html  struct.Descendants.html  struct.FollowingSiblings.html  struct.PrecedingSiblings.html  struct.Predecessors.html  struct.ReverseChildren.html  struct.ReverseTraverse.html  struct.Traverse.html
doc/indextree_macros/: all.html  index.html  macro.tree!.html  macro.tree.html  sidebar-items.js
doc/search.desc/indextree/: indextree-desc-0-.js
doc/search.desc/indextree_macros/: indextree_macros-desc-0-.js
doc/search.index/: 0065756cf5b8.js  00f6428d744a.js  01a7ee0e1b.js  0293f50dc40e.js  0301a163411e.js  035f8d76629e.js  04ffc71476.js  0524ee5006c8.js  0560ffa3f3df.js  05c38c2c9a.js  0694e14aa0.js  06ec4773434e.js  075065a5c05a.js  078df0b85a.js  07ce5898e209.js  08225a060a5e.js  0842eda1e1f0.js  084afd511a8a.js  0890ffd7325a.js  0a31bf532da3.js  0af326e9058d.js  0af8b17b10.js  0b8fd454ef75.js  0b902d69a2af.js  0c3af03aabe3.js  0d26f24dc1.js  0d8f5291fb15.js  0dda10076cce.js  0e1930fa917e.js  0ebd5666ec.js  0edf1e827f6a.js  0f13fbf27bc9.js  1036c22a9c35.js  10f83d5c7f29.js  1101c3a147.js  117d8d51eb24.js  1189e9aecb9e.js  11c563cbfb.js  11cec1c19be7.js  11fa34c2f2b7.js  (+193 more)
doc/search.index/crateNames/: d9e27c47f089.js
doc/search.index/desc/: 1e0fd7af51.js  1e1553bc2e.js  3412e68b5c10.js  4830ca39d322.js  4a9edd73d294.js  5137d1071b3c.js  5b17829a38dd.js  751f6178cd.js  78b659784bf8.js  982d278543cf.js  a254659655c9.js  f33c1cfae8c8.js
doc/search.index/entry/: 0adbc52124.js  1257da901dfc.js  1910cb361aa7.js  207aeb174c.js  21c9b7305ea8.js  4b56666d9d47.js  519001e37c.js  62ce13246678.js  8a51b3e515.js  a561fc9de085.js  d268637c4c29.js  e37dd0f38add.js  e58bbae05293.js  f1126d510cf3.js
doc/search.index/function/: 0270e69474ab.js  1f3f9d8f6aa2.js  4010af431a02.js  4d3cc6733fde.js  4e098082e0.js  4f1b4c4429.js  69336557d5ef.js  6f25e0dab417.js  85d09243aab6.js  a0d187f174cd.js  a9f648d619.js  d29423fc7ac7.js
doc/search.index/generic_inverted_index/: 02c1e092e3d7.js  0a5aa94b80e4.js  103e7338fb.js  2513460c3ba1.js  426429380987.js  4bac8757d67a.js  543dac702242.js  7c06104a38.js  8755b1e79e2c.js  9a0103153115.js  b0ab63463787.js  b256546f5021.js
doc/search.index/name/: 0a5d5db45588.js  0c00e89e1ac8.js  1436c03d6156.js  228073b494fa.js  29b43a5a4063.js  4b4e8ee1bc87.js  536631101b46.js  568bf60e2ebc.js  6ca9440d82a6.js  6efd1f1e24.js  cb27364b96.js  dc3a26fdfa.js
doc/search.index/normalizedName/: 08b00191f40c.js  2b633d0a6309.js  3c97473b3c4b.js  45f863f0fb.js  4f3d68ed6e.js  90eb694284ab.js  9b40646122.js  baf5a436758d.js  d15517424123.js  e27b50cd56da.js  e35a267ce504.js  ef4aab23db7d.js
doc/search.index/path/: 961484a62735.js  a008284783.js  efd486438a4d.js  fdb964376858.js
doc/search.index/type/: 0500109ed8.js  38b6d461fa08.js  3e6314ec28.js  40ea7ff464f8.js  64d89995ad47.js  687d7f3329.js  c183e5c41cbc.js  cdc4fb5b7351.js  cf7d9719a196.js  e378d69ee021.js  e7f531b1898e.js  ff82cd3ff36d.js
doc/src/indextree/: arena.rs.html  debug_pretty_print.rs.html  error.rs.html  id.rs.html  lib.rs.html  node.rs.html  relations.rs.html  siblings_range.rs.html  traverse.rs.html
doc/src/indextree_macros/: lib.rs.html
examples/: parallel_iteration.rs  simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Index.js  trait.IndexMut.js
indextree/: Ancestors.t.html  Cargo.toml  Children.t.html  Descendants.t.html  FollowingSiblings.t.html  NodeEdge.t.html  NodeId.t.html  PrecedingSiblings.t.html  ReverseChildren.t.html  ReverseTraverse.t.html  Traverse.t.html  enum.NodeEdge.html  index.html  sidebar-items.js  struct.Ancestors.html  struct.Arena.html  struct.Children.html  struct.Descendants.html  struct.FollowingSiblings.html  struct.Node.html  struct.NodeId.html  struct.PrecedingSiblings.html  struct.ReverseChildren.html  struct.ReverseTraverse.html  struct.Traverse.html
indextree-macros/: Cargo.toml
indextree-macros/src/: lib.rs
indextree-macros/tests/: regular_usage.rs  stress_test.rs
indextree/examples/: parallel_iteration.rs  simple.rs  tree-macro.rs
indextree/src/: arena.rs  debug_pretty_print.rs  error.rs  id.rs  lib.rs  node.rs  relations.rs  siblings_range.rs  traverse.rs
indextree/tests/: debug_pretty_print.rs  lib.rs  remove.rs
src/: arena.rs  error.rs  id.rs  lib.rs  node.rs  relations.rs  siblings_range.rs  traverse.rs
src/indextree/: lib.rs.html
tests/: debug_pretty_print.rs  insert-error.rs  lib.rs  remove.rs
(+46 files in other folders)
