[package]
name = "indextree"
version = "4.5.0"
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "index", "indextree", "trie"]
authors = ["Sascha Grunert <mail@saschagruenrt.de>"]
repository = "https://github.com/saschagrunert/indextree"
homepage = "https://github.com/saschagrunert/indextree"
documentation = "https://docs.rs/indextree"
description = "Arena based tree structure by using indices instead of reference counted pointers"
categories = ["data-structures"]
edition = "2018"

[badges]
travis-ci = { repository = "saschagrunert/indextree", branch = "main" }
appveyor = { repository = "saschagrunert/indextree", branch = "main", service = "github" }

[features]
default = ["std"]
deser = [ "serde" ]
par_iter = ["rayon"]
std = []

[dependencies]
rayon = { version = "1.4.0", optional = true }
serde = { version = "1.0.115", features = ["derive"], optional = true }

[[example]]
name = "parallel_iteration"
required-features = ["par_iter"]

[[example]]
name = "simple"
