[package]
name = "indextree-macros"
version = "0.1.3"
edition = "2021"
description = "Macros for indextree"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[dev-dependencies]
indextree = { path = "../indextree", version = "4.8.0" }
