[package]
name = "indextree-macros"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
repository = "https://github.com/saschagrunert/indextree"
homepage = "https://github.com/saschagrunert/indextree"
description = "Macros for indextree"
keywords = ["tree", "arena", "index", "indextree"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[dev-dependencies]
indextree = { path = "../indextree", version = "4.8.0" }
