[package]
name = "indextree"
version = "4.8.0"
license = "MIT"
readme = "../README.md"
keywords = ["tree", "arena", "index", "indextree"]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
repository = "https://github.com/saschagrunert/indextree"
homepage = "https://github.com/saschagrunert/indextree"
documentation = "https://docs.rs/indextree"
description = "Arena based tree structure by using indices instead of reference counted pointers"
categories = ["data-structures"]
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["std", "macros"]
deser = ["serde"]
par_iter = ["rayon"]
std = []
macros = ["indextree-macros"]

[dependencies]
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
indextree-macros = { path = "../indextree-macros", version = "0.1.3", optional = true }

[[example]]
name = "parallel_iteration"
required-features = ["par_iter"]

[[example]]
name = "simple"

[[example]]
name = "tree-macro"
required-features = ["macros"]
